# SPaCE

./: .gitignore  README.rst  SPaCE examples.ipynb  SPaCE.py  Sim_NO.npy  pyproject.toml
doc/: index.rst  spacedoc.rst
doc/source/: conf.py  index.rst  metadoc.rst  spacedoc.rst  tutorial.rst
src/: SPaCE.py  __init__.py
