[project]
name = "SPaCE"
dynamic = '0.1.0' 
description = "Spin Precession and Coherent Echo, Python library for simulating spins for EPR"
authors = [
	{name = "Zikri Hasanbasri"},
]
maintainers = [
	{name="Zikri Hasanbasri"},
]
readme = "README.rst"
#license = "GPL-3.0-or-later"
#license-files = ["LICENSE.txt","test/eprfiles/LICENSE.md"]
classifiers = [
	"Private :: Do Not Upload",
	"Devlopment Status :: 4 - Beta",
	"Intended Audience :: Scientists",
	"Programming Language :: Python :: 3",
]
dependencies = [
	'numpy',
	'scipy',
	'matplotlib',
]

[project.optional-dependencies]
all=[
	'sphinx', # documentation system
	'pydata_sphinx_theme', # documentation theme
	'sphinx_copybutton',# enables auto copying of snippets
	'sphinx_design' # allows use of grid, button elements in docs
]
doc = [
	'sphinx', # documentation system
	'pydata_sphinx_theme', # documentation theme
	'sphinx_copybutton',# enables auto copying of snippets
	'sphinx_design' # allows use of grid, button elements in docs
	]

[project.urls]
Repository ="https://github.com/zhasanbasri-hash/SPaCE" 
Issues = "https://github.com/zhasanbasri-hash/SPaCE/issues" 
